--- a/Makefile.in
+++ b/Makefile.in
@@ -1,29 +1,26 @@
 PROG =		table-passwd
 SRCS =		table_passwd.c dict.c log.c stdio.c util.c
-COMPATS =	
 OBJS =		${SRCS:.c=.o} @LIBOBJS@
-
-# DEBUG =		-O0 -g3 -U_FORTIFY_SOURCE -Wno-cpp
 
 CC =		@CC@
 CFLAGS =	@CFLAGS@ ${DEBUG}
+PREFIX =	@prefix@
+MANDIR =	@mandir@
+SHELL =		@SHELL@
+datarootdir =	@datarootdir@
+srcdir =	@srcdir@
 
 INSTALL =	install
 INSTALL_MAN =	${INSTALL} -m 0444
 INSTALL_PROGRAM=${INSTALL} -m 0555
 LIBOBJDIR =	openbsd-compat/
 MKDIR_P =	mkdir -p
-PREFIX =	@prefix@
-prefix =	@prefix@
-
-MANDIR =	@mandir@
+prefix =	${PREFIX}
 SMTPDIR =	${PREFIX}/libexec/smtpd
 
-datarootdir =	@datarootdir@
+all: Makefile ${PROG}
 
-all: ${PROG}
-
-.PHONY: all clean install
+.PHONY: all clean install dist
 
 ${PROG}: ${OBJS}
 	${CC} -o ${PROG} ${OBJS}
@@ -42,3 +39,30 @@ install:
 
 README.md: table-passwd.5
 	mandoc -Tmarkdown -l table-passwd.5 > README.md
+
+# automatic remaking
+$(srcdir)/configure: configure.ac aclocal.m4
+	cd '$(srcdir)' && autoconf
+
+Makefile: Makefile.in config.status
+	./config.status
+
+config.status: configure
+	./config.status --recheck
+
+# Release tarballs
+DISTNAME =	@PACKAGE_NAME@-@PACKAGE_VERSION@
+dist:
+	mkdir -p .dist/${DISTNAME}/openbsd-compat/tree/sys
+	${INSTALL} -m 0644 aclocal.m4 bootstrap compat.h config.h.in \
+		configure configure.ac dict.c dict.h log.c log.h \
+		Makefile.in README.md stdio.c stdio.h table-passwd.5 \
+		table_passwd.c util.c util.h \
+		.dist/${DISTNAME}/
+	cd .dist/${DISTNAME} && chmod 755 bootstrap configure
+	cd openbsd-compat/ && ${INSTALL} -m 0644 asprintf.c err.c err.h \
+		getprogname.c strlcat.c strlcpy.c strsep.c strtonum.c \
+		../.dist/${DISTNAME}/openbsd-compat
+	cp -R openbsd-compat/tree/sys/tree.h .dist/${DISTNAME}/openbsd-compat/tree/sys
+	cd .dist/ && tar zcf ../${DISTNAME}.tar.gz ${DISTNAME}
+	rm -rf .dist
