--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,6 @@
 AC_INIT([table-passwd], [0.1], [bugs@opensmtpd.org])
+AC_CONFIG_AUX_DIR(etc)
+AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])
 AC_CONFIG_LIBOBJ_DIR(openbsd-compat)
 AC_PROG_CC
 AC_USE_SYSTEM_EXTENSIONS
