--- a/Makefile.am
+++ b/Makefile.am
@@ -11,3 +11,6 @@ smtpdir =		${prefix}/libexec/smtpd
 install-exec-local: $(noinst_PROGRAMS)
 	$(MKDIR_P) $(DESTDIR)$(smtpdir)
 	$(INSTALL_PROGRAM_ENV) $(INSTALL_PROGRAM) $(noinst_PROGRAMS) $(DESTDIR)$(smtpdir)
+
+README.md: table-passwd.5
+	mandoc -Tmarkdown -l table-passwd.5 >README.md
