--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS =		openbsd-compat
+
 noinst_PROGRAMS =	table-passwd
 
 table_passwd_SOURCES =	table_passwd.c dict.c log.c table_stdio.c util.c
