--- a/configure.ac
+++ b/configure.ac
@@ -24,5 +24,6 @@ AC_CHECK_HEADER([sys/tree.h], [], [
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
 	Makefile
+	openbsd-compat/Makefile
 ])
 AC_OUTPUT
